syntax = "proto3";

package v1.uspb;

option go_package = "github.com/dj-yacine-flutter/gojo;uspbv1";

message VerifyEmailRequest {
  int64  emailID    = 1;
  string secretCode = 2;
}

message VerifyEmailResponse {
  bool isVerified = 1;
}